-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 15
-
Component/s: hotspot
-
b12
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8241207 | 11.0.8 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
There are a few places in the native coding of jdk.hotspot.agent were we miss ReleaseStringUTFChars calls in case of early returns.
For example the calls are missing in saproc.cpp and MacosxDebuggerLocal.m .
For example the calls are missing in saproc.cpp and MacosxDebuggerLocal.m .
- backported by
-
JDK-8241207 jdk.hotspot.agent misses some ReleaseStringUTFChars calls in case of early returns
-
- Resolved
-