8239462: jdk.hotspot.agent misses some ReleaseStringUTFChars calls in case of early returns

Reviewed-by: clanger, amenkov, sspitsyn